--- a/src/styles.css
+++ b/src/styles.css
@@ -25,14 +25,16 @@
     padding-top: 10px;
     margin: 0;
   }
-  
-  .dayTime {
+  .moreInfo{
     color: #815e94;
+    display: block;
     font-family: "Comfortaa", cursive;
-    padding-left: 15px;
+    position: relative;
+    top: 1px;
+    left: 20px;
+    padding-bottom: 5px;
     font-size: small;
-    margin-bottom: 15px;
-    z-index: 0;
+
   }
   
   .search-cities {
