--- a/src/styles.css
+++ b/src/styles.css
@@ -1,45 +1,27 @@
 .card {
-    border-style: solid;
+    border-style: none;
     border-radius: 20px;
     display: block;
     height: 500px;
-    margin: 40px 50px;
-    width: 500px;
+    margin: 40px auto;
+    max-width: 500px;
   }
   
   .card-body {
-    background-color: #f7f7f7;
-    border-color: #8cdadb;
-    border-width: 5px;
-    border-style: solid;
+    background:  linear-gradient(180deg, rgb(162, 218, 246) 0%, rgb(195, 246, 246) 23%, rgb(250, 245, 245) 90%);
+    border: 2px hidden #8cdadb;
     border-radius: 20px;
-    height: 700px;
+    height: 550px;
     padding: 0;
-    width: 500px;
+    width: 360px;
   }
   
-  h1 {
-    color: #815e94;
-    font-family: "Comfortaa", cursive;
-    padding-left: 15px;
-    padding-top: 10px;
-    margin: 0;
-  }
-  .moreInfo{
-    color: #815e94;
-    display: block;
-    font-family: "Comfortaa", cursive;
-    position: relative;
-    top: 1px;
-    left: 20px;
-    padding-bottom: 5px;
-    font-size: small;
-  }
-  
+   
   .search-cities {
     font-family: "Comfortaa", cursive;
     position: relative;
     left: 10px;
+    top: 20px;
     text-decoration: solid;
     width: 220px;
     margin-right: 0px;
@@ -50,52 +32,106 @@
   .lupa {
     border: none;
     position: relative;
-    left: 225px;
-    bottom: 33px;
+    left: 240px;
+    bottom: 15px;
     background-color: transparent;
   }
   
   .current {
     border: none;
     position: relative;
-    left: 215px;
-    bottom: 33px;
+    left: 240px;
+    bottom: 15px;
     background-color: transparent;
   }
+
+  .line{ 
+    border-bottom: 3px solid #fff;
+    display: block;
+    position: relative;
+    top:10px;
+  }
+
+  h1 {
+    color:black;
+    font-family: "Comfortaa", cursive;
+    padding-left: 15px;
+    padding-top: 10px;
+    margin: 0;
+  }
+  .moreInfo{
+    color: black;
+    display: block;
+    font-family: "Comfortaa", cursive;
+    font-size: small;
+    position: relative;
+    top: 1px;
+    left: 20px;
+    padding-bottom: 5px;
+  }
+ 
   
   h2 {
-    color: #815e94;
+    color:black;
     display: block;
     font-family: "Comfortaa", cursive;
     font-size: 100px;
+    text-align: right;
     position: relative;
-    bottom: 110px;
-    left: 320px;
+    margin-right: 30px;
+    bottom: 80px;
+   
   }
   
   h5 {
-    color: #815e94;
+    color: black;
     display: block;
     font-family: "Comfortaa", cursive;
     font-size: 30px;
+    margin-top: 5px;
     position: relative;
-    bottom: 250px;
-    left:430px;
+    bottom: 215px;
+    left:315px;
+    width: 100%;
   }
+
+  .underTemp{
+    color: black;
+    font-family: "Comfortaa", cursive;
+    font-size: 11px;
+    position: relative;
+    bottom: 150px;
+    right: 10px;
+    text-align: right;
+
+  }
+  
   .sunnyImage {
     position: relative;
-    bottom: 130px;
-    left: 110px;
-    width: 250px;
+    bottom: 230px;
+    left: 10px;
+    width: 180px;
+    transform: rotateY(180deg);
+    
   }
+
+  .motivacional{
+    position: relative;
+    bottom: 260px;
+    display: block;
+    font-style: italic;
+    text-align: center;
+  }
+
   .row {
-    border-color: #8cdadb;
+    border-color: #ffff;
     border-style: solid;
     border-bottom: none;
     border-left: none;
     border-right: none;
+    font-size: 13px;
     position: relative;
-    bottom: 160px;
+    bottom: 295px;
     margin: 0 1px 0 1px;
     text-align: center;
   }
