--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ body{
     background:  linear-gradient(180deg, rgb(162, 218, 246) 0%, rgb(195, 246, 246) 23%, rgb(250, 245, 245) 90%);
     border: 2px hidden #8cdadb;
     border-radius: 20px;
-    height: 520px;
+    height: 530px;
     padding: 0;
     width: 360px;
   }
@@ -114,7 +114,7 @@ body{
     text-align: right;
     position: relative;
     margin-right: 40px;
-    bottom: 90px;
+    bottom: 70px;
    
   }
   
@@ -125,7 +125,7 @@ body{
     font-size: 30px;
     margin-top: 5px;
     position: relative;
-    bottom: 200px;
+    bottom: 165px;
     left:315px;
     width: 100%;
   }
@@ -135,7 +135,7 @@ body{
     font-family: "Comfortaa", cursive;
     font-size: 11px;
     position: relative;
-    bottom: 150px;
+    bottom: 140px;
     right: 10px;
     text-align: right;
     list-style-type:none;
@@ -169,11 +169,11 @@ body{
 
   .motivacional{
     position: relative;
-    bottom: 425px;
+    bottom: 415px;
     display: block;
     font-style: italic;
     text-align: center;
-    font-size: 15px;
+    font-size: 13px;
   }
   .bottomLine{
       position: relative;
@@ -188,4 +188,8 @@ body{
 
     .gitLink:hover{
       text-decoration: underline;  
+    }
+  
+    .pixabay{
+      list-style-type: none;
     }
