--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 .page-body{
-  background-color:#e8eaef;
+  background-color:#fff;
 }
 
 
@@ -8,7 +8,7 @@
     border-style: none;
     border-radius: 20px;
     display: block;
-    height: 570px;
+    height: 600px;
     margin: 40px auto;
     max-width: 360px;
   }
@@ -17,7 +17,8 @@
     
     border: 2px hidden #8cdadb;
     border-radius: 20px;
-    height: 570px;
+    box-shadow: -1px 1px 9px rgba(0, 0, 0, 0.3);
+    height: 600px;
     padding: 0;
     width: 360px;
   }
@@ -26,6 +27,7 @@
   .search-cities {
     border: 2px solid #fff;
     border-radius: 7px;
+    box-shadow: -2px 2px 9px rgba(0, 0, 0, 0.4);
     height:35px;
     left: 10px;
     margin-right: 0px;
@@ -38,32 +40,35 @@
   .form-control{
     height: 30px;
     font-size: 13px;
-    font-family: "Comfortaa", cursive;
+    font-family: 'Finger Paint', cursive;
   
   }
 
   .lupa {
-    background-color: transparent;
+    background-color:rgba(255, 255, 255, 0.5);
     border: solid #ffff 2px;
     border-radius: 7px;
     bottom: 12px;
+    box-shadow: -2px 2px 9px rgba(0, 0, 0, 0.4);
     font-size: 12px;
-    font-family: "Comfortaa", cursive;
+    font-family: 'Finger Paint', cursive;
     left: 195px;
     position: relative;
     width: 70px;
   }
 
   .lupa:hover{
-    background: rgba(255, 255, 255, 0.5);
+    background: transparent;
+    color: #fff;
   }
   
   .current {
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.5);
     border:solid #ffff 2px;
     border-radius: 7px;
     bottom: 12px;
-    font-family: "Comfortaa", cursive;
+    box-shadow: -2px 2px 9px rgba(0, 0, 0, 0.4);
+    font-family: 'Finger Paint', cursive;
     font-size: 12px;
     left: 200px;
     position: relative;
@@ -71,7 +76,8 @@
   }
 
   .current:hover{
-    background: rgba(255, 255, 255, 0.5);
+    background: transparent;
+    color: #fff;
   }
 
   .line{ 
@@ -83,16 +89,19 @@
 
   h1 {
     color:black;
-    font-family: "Comfortaa", cursive;
+    font-family: 'Cabin Sketch', cursive;
+    font-size: 50px;
     padding-left: 15px;
     padding-top: 10px;
     margin: 0;
   }
+
   .moreInfo{
+    bottom: 5px;
     color: black;
     display: block;
-    font-family: "Comfortaa", cursive;
-    font-size: small;
+    font-family: 'Finger Paint', cursive;
+    font-size: 12px;
     list-style-type:none;
     padding-bottom: 5px;
     position: relative;
@@ -106,11 +115,11 @@
   }
   
   h2 {
-    bottom: 70px;
+    bottom: 90px;
     color:black;
     display: block;
-    font-family: "Comfortaa", cursive;
-    font-size: 80px;
+    font-family: 'Cabin Sketch', cursive;
+    font-size: 90px;
     margin-right: 40px;
     position: relative;
     right: 5px;
@@ -118,11 +127,11 @@
   }
   
   h5 {
-    bottom: 165px;
+    bottom: 195px;
     color: black;
     display: block;
-    font-family: "Comfortaa", cursive;
-    font-size: 30px;
+    font-family: 'Cabin Sketch', cursive;
+    font-size: 40px;
     left:315px;
     margin-top: 5px;
     position: relative;
@@ -130,9 +139,9 @@
   }
 
   .underTemp{
-    bottom: 140px;
+    bottom: 175px;
     color: black;
-    font-family: "Comfortaa", cursive;
+    font-family: 'Finger Paint', cursive;
     font-size: 11px;
     list-style-type:none;
     position: relative;
@@ -141,9 +150,10 @@
   }
 
   .row {
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
-    bottom: 140px;
+    bottom: 170px;
+    box-shadow: -5px 5px 2.5px rgb(0, 0, 0, 0.2);
     left: 200px;
     margin:0;
     position: relative;
@@ -151,7 +161,7 @@
   }
   
   .col-6 {
-    font-family: "Comfortaa", cursive;
+    font-family: 'Finger Paint', cursive;
     font-size: 11px;
     margin: 8px 0;
     text-align: center;  
@@ -161,21 +171,43 @@
   opacity: 0.5;
 }
 
+.tape-img{
+  bottom: 413px;
+  position: relative;
+  left:248px;
+  width:50px;
+}
 .weatherImage {
     border-radius: 5px;
-    bottom: 440px;
+    bottom: 490px;
     left: 10px;
     position: relative;
     width: 180px;  
   }
 
-  .motivacional{
-    bottom: 430px;
+.line-bottom{ 
+    border-bottom: 3px solid #fff;
+    bottom: 495px;
+    box-shadow: -1px 1px 9px rgba(0, 0, 0, 0.1);
     display: block;
-    font-size: 13px;
-    font-style: italic;
+    position: relative;
+  }
+
+.motivacional{
+    align-items: center;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    bottom: 510px;
+    box-shadow: -1px 1px 9px rgba(0, 0, 0, 0.3);
+    display: flex;
+    font-size: 18px;
+    font-family: 'Sunshiney', cursive;
+    height: 63px;
+    justify-content: center;
+    left: 60px;
     position: relative;
     text-align: center;
+    width: 260px;
   }
   .bottomLine{
       font-size: 11px;
