--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@
 }
   
 .search-cities {
-    border: 2px solid #fff;
+    background-color: #fff;
     border-radius: 7px;
     box-shadow: -2px 2px 9px rgba(0, 0, 0, 0.4);
     height:35px;
@@ -22,7 +22,7 @@
     position: relative;
     text-decoration: solid;
     top: 20px;
-    max-width: 170px;
+    max-width: 200px;
     width: 100%;
 }
 
@@ -34,38 +34,42 @@
 }
 
 .lupa {
-    background-color:rgba(255, 255, 255, 0.5);
-    border: solid #ffff 2px;
-    border-radius: 7px;
-    bottom: 12px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-color: transparent;
+  border-radius: 7px;
+    bottom: 5px;
     box-shadow: -2px 2px 9px rgba(0, 0, 0, 0.4);
     font-size: 12px;
     font-family: 'Finger Paint', cursive;
-    left: 195px;
+    left: 230px;
     position: relative;
-    width: 70px;
+    width: 40px;
 }
 
 .lupa:hover{
     background: transparent;
+    border:solid rgba(255, 255, 255, 0.5) 2px;
     color: #fff;
 }
   
 .current {
     background-color: rgba(255, 255, 255, 0.5);
-    border:solid #ffff 2px;
+    border-color: transparent;
     border-radius: 7px;
-    bottom: 12px;
+    bottom: 20px;
     box-shadow: -2px 2px 9px rgba(0, 0, 0, 0.4);
-    font-family: 'Finger Paint', cursive;
-    font-size: 12px;
-    left: 200px;
+    left: 340px;
     position: relative;
-    width: 70px;
+    width: 40px;
+}
+.pin-img{
+  width: 30px;
+  margin:0 auto;
 }
 
 .current:hover{
     background: transparent;
+    border:solid rgba(255, 255, 255, 0.5) 2px;
     color: #fff;
 }
 
